--- a/css/styles.css
+++ b/css/styles.css
@@ -30,11 +30,6 @@ ul{
     padding-left: 0;
     margin: 0;
 }
-.img-size{
-    display:block;
-    width:100%;
-    height:auto;
-}
 
 .container{
     width: 1200px;
@@ -58,15 +53,6 @@ ul{
     list-style: none;
 }
 
-.header-nav{
-    display: flex;
-    align-items: center;
-}
-    
-.header-list{
-    display: flex;
-    background-color: var(--head-color);
-}
 
 .text{
     color: var(--header-text-color);
@@ -207,9 +193,40 @@ ul{
     display: flex;
 }
 
-.img + .img{
+.list-block + .list-block{
     margin-left: 30px;
 }
+
+.img{
+    height: 294px;
+}
+
+.list-block{
+position: relative;
+}
+
+.list-info{
+    position: absolute;
+    bottom: 0;
+    width: 370px;
+    height: 70px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding-top: 27px;
+    background-color: rgba(47, 48, 58, 0.8);
+}
+
+.img-size{
+    /* display:block; */
+    width:100%;
+    height:294px;
+}
+
 
 .list-team{
     display: flex;
@@ -360,6 +377,26 @@ ul{
 
 .header-logo{
     color: #212121;
+}
+
+
+.header-nav{
+    display: flex;
+    align-items: center;
+}
+    
+.header-list{
+    display: flex;
+    background-color: var(--head-color);
+    align-items: center;
+}
+
+.header-list::after{
+    content: "";
+    width: 48px;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #2196F3;
 }
 
 .header-info:not(:last-child){
