--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,11 @@ ul{
     padding-left: 0;
     margin: 0;
 }
+.img-size{
+    display:block;
+    width:100%;
+    height:auto;
+}
 
 .container{
     width: 1200px;
@@ -53,6 +58,15 @@ ul{
     list-style: none;
 }
 
+.header-nav{
+    display: flex;
+    align-items: center;
+}
+    
+.header-list{
+    display: flex;
+    background-color: var(--head-color);
+}
 
 .text{
     color: var(--header-text-color);
@@ -193,40 +207,9 @@ ul{
     display: flex;
 }
 
-.list-block + .list-block{
+.img + .img{
     margin-left: 30px;
 }
-
-.img{
-    height: 294px;
-}
-
-.list-block{
-position: relative;
-}
-
-.list-info{
-    position: absolute;
-    bottom: 0;
-    width: 370px;
-    height: 70px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    padding-top: 27px;
-    background-color: rgba(47, 48, 58, 0.8);
-}
-
-.img-size{
-    /* display:block; */
-    width:100%;
-    height:294px;
-}
-
 
 .list-team{
     display: flex;
@@ -379,28 +362,13 @@ position: relative;
     color: #212121;
 }
 
-
-.header-nav{
-    display: flex;
-    align-items: center;
-}
-    
-.header-list{
-    display: flex;
-    background-color: var(--head-color);
-    align-items: center;
-}
-
-.header-list::after{
-    content: "";
-    width: 48px;
-    height: 4px;
-    border-radius: 4px;
-    background-color: #2196F3;
-}
-
 .header-info:not(:last-child){
     margin-right: 50px;
+}
+
+.header-info{
+    padding-top: 32px;
+    padding-bottom: 32px; 
 }
 
 .header-item{
@@ -413,10 +381,6 @@ position: relative;
 .header-item:hover,
 .header-item:focus{
     color: #2196F3;
-}
-
-.header-item:link{
-    color: yellow;
 }
 
 .current{
