--- a/css/styles.css
+++ b/css/styles.css
@@ -307,6 +307,8 @@ ul{
 .team-link:hover,
 .team-link:focus {
     background-color: #2196F3;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .team-link-svg{
@@ -316,6 +318,8 @@ ul{
 .team-link:hover .team-link-svg,
 .team-link:focus .team-link-svg{
     fill: #FFFFFF;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .section-client{
@@ -359,6 +363,8 @@ ul{
 .client-link:hover,
 .client-link:focus{
     border-color: #2196F3;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .client-link-svg {
@@ -368,6 +374,8 @@ ul{
 .client-link:hover .client-link-svg,
 .client-link:focus .client-link-svg{
     fill: #2196F3;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .header-name{
@@ -399,6 +407,8 @@ ul{
 .header-item:hover,
 .header-item:focus{
     color: #2196F3;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .current{
@@ -429,11 +439,14 @@ ul{
 
 .header-contact-icon{
     fill: currentColor;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .header-contact:hover,
 .header-contact:focus{
     color: #2196F3;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main h1{
@@ -460,6 +473,7 @@ ul{
 .btn-style:focus {
     color: #FFFFFF;
     background-color: #2196F3;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -482,12 +496,28 @@ ul{
     background-color: var(--head-color);
 }
 
-.section-text{
+.section-pictures:hover .section-info-text{
+    transform: translateY(0%);
+}
+
+.section-top-text{
+    position: relative;
+    overflow: hidden;
+}
+
+.section-info-text{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    padding: 63px 24px;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
     color: #FFFFFF;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(100%);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .block{
@@ -495,7 +525,8 @@ ul{
     text-decoration: none;
 }
 
-.block:hover{
+.section-pictures:hover{
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 
 }
@@ -583,6 +614,7 @@ ul{
 .footer-contact:hover,
 .footer-contact:focus{
     color: #2196F3;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-info{
@@ -627,6 +659,7 @@ ul{
 .footer-link:hover,
 .footer-link:focus{
     background-color: #2196F3;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link{
