--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ ul{
     position: relative;
     padding-top: 24px;
     padding-bottom: 25px;
-    /* border-bottom: 1px solid #ECECEC; */
+    border-bottom: 1px solid #ECECEC;
 }
 
 .header .container{
@@ -109,20 +109,18 @@ ul{
 
 .current{
     color: #2196F3;
-}
-
-/* .header-item.current{
     position: relative;
-} */
+}
 
 .header-item.linea::after{
     content: '';
     position: absolute;
-    width: 48px;
+    width: 100%;
     height: 4px;
     background-color: #2196F3;
     border-radius: 2px;
-    bottom: 0;
+    bottom: -32px;
+    left: 0;
 }
 
 
