--- a/css/styles.css
+++ b/css/styles.css
@@ -97,14 +97,13 @@ ul{
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-item:hover,
 .header-item:focus{
     color: #2196F3;
-
 }
 
 .current{
@@ -147,7 +146,8 @@ ul{
     text-decoration: none;
     display: flex;
     align-items: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -246,6 +246,9 @@ ul{
 .backdrop.is-hidden{
     opacity: 0;
     pointer-events: none;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal{
@@ -258,7 +261,6 @@ ul{
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transition: 1050ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -435,7 +437,8 @@ ul{
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -446,8 +449,8 @@ ul{
 
 .team-link-svg{
     fill: #AFB1B8;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-link:hover .team-link-svg,
@@ -491,7 +494,8 @@ ul{
     align-items: center;
     justify-content: center;
     background-position: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -502,7 +506,9 @@ ul{
 
 .client-link-svg {
     fill: #AFB1B8;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .client-link:hover .client-link-svg,
@@ -528,7 +534,8 @@ ul{
     font-weight: 500;
     line-height: 1.62;
     letter-spacing: 0.03em;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -590,7 +597,9 @@ ul{
     color: #FFFFFF;
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(101%);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .section-link{
@@ -671,8 +680,8 @@ ul{
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
     margin-top: 9px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact:hover,
@@ -717,8 +726,8 @@ ul{
 
 .footer-link:not(:last-child){
     margin-left: 10px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
