--- a/css/styles.css
+++ b/css/styles.css
@@ -97,8 +97,7 @@ ul{
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-item:hover,
@@ -146,9 +145,7 @@ ul{
     text-decoration: none;
     display: flex;
     align-items: center;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contact-icon{
@@ -241,18 +238,17 @@ ul{
     left: 0px;
     top: 0px;
     background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden{
     opacity: 0;
     pointer-events: none;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .modal{
-    position: absolute;
+    position: fixed;
     width: 528px;
     height: 581px;
     left: 50%;
@@ -347,22 +343,26 @@ ul{
     position: relative;
 }
 
-.img-text{
-    display: flex;
-    text-align: center;
-    justify-content: center;
+.img-box{
     position: absolute;
-    padding: 27px   ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     bottom: 0;
     width: 370px;
     height: 70px;
+    mix-blend-mode: normal;
+    background-color: rgba(47, 48, 58, 0.8);
+
+}
+
+.img-text{
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
-    background-color: rgba(47, 48, 58, 0.8);
 }
 
 .img + .img{
@@ -437,9 +437,7 @@ ul{
     display: flex;
     align-items: center;
     justify-content: center;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-link:hover,
@@ -449,8 +447,7 @@ ul{
 
 .team-link-svg{
     fill: #AFB1B8;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-link:hover .team-link-svg,
@@ -494,9 +491,7 @@ ul{
     align-items: center;
     justify-content: center;
     background-position: center;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
@@ -506,9 +501,7 @@ ul{
 
 .client-link-svg {
     fill: #AFB1B8;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover .client-link-svg,
@@ -534,9 +527,7 @@ ul{
     font-weight: 500;
     line-height: 1.62;
     letter-spacing: 0.03em;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-style:hover,
@@ -572,10 +563,11 @@ ul{
 .block{
     display: block;
     text-decoration: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.block:hover .section-info-text,
-.block:focus .section-info-text{
+.block:hover,
+.block:focus {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -597,9 +589,7 @@ ul{
     color: #FFFFFF;
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(101%);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-link{
@@ -680,8 +670,7 @@ ul{
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
     margin-top: 9px;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact:hover,
@@ -722,12 +711,11 @@ ul{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:not(:last-child){
     margin-left: 10px;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
