--- a/css/styles.css
+++ b/css/styles.css
@@ -527,7 +527,7 @@ ul{
     font-weight: 500;
     line-height: 1.62;
     letter-spacing: 0.03em;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms, background-color 250ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-style:hover,
