--- a/css/styles.css
+++ b/css/styles.css
@@ -556,9 +556,11 @@ ul{
     background-color: var(--head-color);
 }
 
-.section-pictures:hover .section-info-text{
+.block:hover .section-info-text{
     transform: translateY(0%);
 }
+
+
 
 .block{
     display: block;
